--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "page-checker",
+  "name": "url-checker",
   "version": "0.0.1",
-  "description": "Tool for checking pages of websites for simple things like certain texts or selectors.",
-  "main": "dist/page-checker.js",
+  "description": "Tool for checking URLs for simple things like certain texts or selectors.",
+  "main": "dist/url-checker.js",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,9 +18,9 @@
   "author": "Benjamin Hofmann",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/benni3005/page-checker/issues"
+    "url": "https://github.com/benni3005/url-checker/issues"
   },
-  "homepage": "https://github.com/benni3005/page-checker#readme",
+  "homepage": "https://github.com/benni3005/url-checker#readme",
   "dependencies": {
     "chalk": "^2.1.0",
     "request": "^2.82.0",
