--- a/package.json
+++ b/package.json
@@ -23,14 +23,20 @@
     "request-promise-native": "^1.0.4"
   },
   "devDependencies": {
+    "@types/chai": "^4.0.4",
     "@types/chalk": "^0.4.31",
+    "@types/mocha": "^2.2.43",
     "@types/request": "^2.0.3",
     "@types/request-promise-native": "^1.0.6",
+    "chai": "^4.1.2",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-mocha": "^4.3.1",
     "gulp-tslint": "^8.1.2",
     "gulp-typescript": "^3.2.2",
     "merge2": "^1.2.0",
+    "mocha": "^4.0.1",
+    "ts-node": "^3.3.0",
     "tslint": "^5.7.0",
     "typescript": "^2.5.3"
   }
